z-index bug fix

--- a/css/wilderness.css
+++ b/css/wilderness.css
@@ -48,7 +48,7 @@ body {
 }
 
 #player {
-    z-index: 1; /* assures player will always be in front of everything (ex. bushes) */
+    z-index: 999; /* assures player will always be in front of everything (ex. bushes) */
     background-image: url("../img/wilderness/player_front.png");
     position: absolute;
     top: 45%;
